<resources>

    <string name="app_name">
        Invictus
    </string>
    <string name="app_motto">
        Master of my fate
    </string>

    <!-- Navigation -->
    <string name="title_home">
        Home
    </string>
    <string name="title_historical">
        Historical
    </string>
    <string name="title_profile">
        Profile
    </string>
    <string name="title_settings">
        Settings
    </string>
    <string name="previous">
        Previous
    </string>
    <string name="next">
        Next
    </string>

    <!-- Home -->
    <string name="hi">Hi!</string>
    <string name="ok">OK</string>
    <string name="falls">Falls</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="sportype_error">You didn\'t choose any sport. Please, try again.</string>
    <string name="start_traking">Let\'s go! Traking starts for:</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_message">Are you sure you want to stop this tracking activity?</string>
    <string name="leave_comment">What\'s on your mind? how was your activity?</string>
    <string name="congrats">Well done!</string>
    <string name="permission">Allow Invictus to access your physical activity in app permissions.</string>

    <!-- Historical -->
    <string name="select">Choose an option</string>
    <string name="walk">Walk</string>
    <string name="jog">Jog</string>
    <string name="rope_skipping">Rope skipping</string>
    <string name="run">Run</string>
    <string name="bike">Bike</string>
    <string name="climb">Climb</string>
    <string name="no_implemented">Sorry, this option hasn\'t been implemented yet.</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="to">to</string>

    <!-- Historical - Option weight-->
    <string name="current_weight">Current weight: </string>
    <string name="attention">Attention</string>
    <string name="no_record">Oops… There\'s nothing here. You can start tracking right now!</string>

    <!-- Historical - Option sport-->
    <string name="total_sport">Total per period: </string>
    <string name="id">#</string>
    <string name="sport">Sport</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="max_speed">Maximum reached speed</string>
    <string name="avg_speed">Average speed</string>
    <string name="speed_chart">Speed Chart (km/h)</string>
    <string name="comments">Comments</string>

    <!-- Profile -->
    <string name="basic_category">About you</string>
    <string name="gender">Gender</string>
    <string-array name="gender_array">
        <item>Prefer not to answer</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="birthdate">Birthdate</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="age">Age</string>
    <string name="age_und">years old</string>

    <string name="body_category">About your body</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string-array name="bmi_clasification_array">
        <item>Insufficient weight</item>
        <item>Normal weight</item>
        <item>Overweight Level I</item>
        <item>Overweight Level II (pre-obesity)</item>
        <item>Obesity Level I</item>
        <item>Obesity Level II</item>
        <item>Obesity Level III (morbid)</item>
        <item>Obesity Level IV (extreme)</item>
    </string-array>

    <string name="update_date">Last update</string>
    <string name="successfully_saved">Data successfully saved</string>
    <string name="error_saved">Unable to save on Database</string>
    <string name="error_read">Unable to read from Database</string>

    <!-- Service -->
    <string name="notification_title">Invictus is tracking your activity</string>

    <!-- Settings -->
    <string name="tracking_category">
        Tracking parameters
    </string>
    <string name="auto_finish_title">
        Finish automatically
    </string>
    <string name="auto_finish_summary">
        Tracking will finish automatically, when it reaches the limit of samples.
    </string>
    <string name="limit_of_samples_title">
        Limit of samples
    </string>
    <string name="limit_of_samples_summary">
        Maximum number of samples to acquire. System takes a sample each 20ms.
    </string>
    <string name="saving_category">
        Saving parameters
    </string>
    <string name="speed_title">
        Speed period
    </string>
    <string name="speed_summary">
        Time in seconds to update and save speed information.
    </string>
    <string name="sport_title">
        Sport period
    </string>
    <string name="sport_summary">
        Time in minutes to update and save sport tracking information.
    </string>
    <string name="save_on_sd_title">
        Save accelerometer samples
    </string>
    <string name="save_on_sd_summary">
        Save sensor acquired samples on a text file in download directory. Each sample has triaxial
        acceleration (X, Y, Z) and date.
    </string>
    <string name="fileName_title">
        Filename
    </string>
    <string name="filename_summary">
        Filename where sensor data is allocated.
    </string>
    <string name="multiple_files_title">
        Multiple files
    </string>
    <string name="multiple_files_summary">
        Create a new file peer each tracking. The filename will have a consecutive number at the end
        . Example: Invictus1, Invictus2,…,Invictus100.
    </string>

    <string name="visualization_category">
        Visualization parameters
    </string>
    <string name="refresh_title">
        Screen period
    </string>
    <string name="refresh_summary">
        Time in seconds to update information on the screen.
    </string>
    <string name="unit_system_title">
        Units
    </string>
    <string name="unit_system_summary">
        System of Units
    </string>
    <string-array name="unit_system_entries">
        <item>International System</item>
        <item>Imperial/British System</item>
    </string-array>
    <string name="debug_summary">
        Show messages about the application flow.
    </string>
    <string name="debug_title">
        Debugging
    </string>
</resources>