<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.historical.SportPlaceholderFragment">

    <LinearLayout
        android:id="@+id/sportDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/periodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_general_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previousPeriodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_background"
                android:rotation="180"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/previous" />

            <TextView
                android:id="@+id/periodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/activity_text_level1_size" />

            <ImageButton
                android:id="@+id/nextPeriodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_background"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next" />

        </LinearLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/sportChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="@dimen/activity_general_margin"
            android:padding="@dimen/activity_general_margin"/>

        <LinearLayout
            android:id="@+id/totalSportLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:background="@color/lightGreen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_general_margin"
                android:text="@string/total_sport"
                android:textSize="@dimen/activity_text_level1_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalFallsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/activity_text_level1_size"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/totalFallsImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_falls_black_24dp"
                    app:tint="@android:color/tertiary_text_light"
                    android:contentDescription="@string/falls" />

                <TextView
                    android:id="@+id/totalStepsJumpsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/activity_text_level1_size"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/totalStepsImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_steps_black_24dp"
                    app:tint="@android:color/tertiary_text_light"
                    android:contentDescription="@string/steps" />

                <TextView
                    android:id="@+id/totalCaloriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/activity_text_level1_size"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/totalCaloriesImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_calories_black_24dp"
                    app:tint="@android:color/tertiary_text_light"
                    android:contentDescription="@string/calories" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/sportListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/noRecordSportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_general_margin"
        android:text="@string/no_record"
        android:textSize="@dimen/activity_text_level1_size"
        android:textStyle="bold"
        app:drawableTint="?attr/colorControlNormal"
        app:drawableTopCompat="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>