<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.historical.WalkPlaceholderFragment">

    <LinearLayout
        android:id="@+id/weightDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/periodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_general_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previousPeriodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_background"
                android:rotation="180"
                android:src="@drawable/ic_arrow_24dp"
                android:contentDescription="@string/previous" />

            <TextView
                android:id="@+id/periodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/activity_text_level1_size" />

            <ImageButton
                android:id="@+id/nextPeriodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_background"
                android:src="@drawable/ic_arrow_24dp"
                android:contentDescription="@string/next" />

        </LinearLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/weightChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="@dimen/activity_general_margin"
            android:padding="@dimen/activity_general_margin"/>

        <LinearLayout
            android:id="@+id/currentWeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_general_margin"
            android:background="@color/lightYellow"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCurrentWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:text="@string/current_weight"
                android:textSize="@dimen/activity_text_level1_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentWeightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:textSize="@dimen/activity_text_level2_size"  />

            <TextView
                android:id="@+id/currentWeightUndTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:textSize="@dimen/activity_text_level2_size"  />
        </LinearLayout>

        <ListView
            android:id="@+id/weightListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/noRecordWeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_general_margin"
        android:text="@string/no_record"
        android:textSize="@dimen/activity_text_level1_size"
        android:textStyle="bold"
        app:drawableTint="?attr/colorControlNormal"
        app:drawableTopCompat="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>