<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/activity_general_margin"
    android:padding="@dimen/activity_general_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_general_margin">

        <TextView
            android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/activity_text_level3_size" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/activity_text_level3_size" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:textSize="@dimen/activity_text_level3_size" />

        <ImageView
            android:id="@+id/sportImageView"
            android:layout_width="@dimen/activity_icon_level1_size"
            android:layout_height="@dimen/activity_icon_level1_size"
            app:tint="@android:color/tertiary_text_light"
            android:contentDescription="@string/sport" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fallsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/activity_text_level1_size" />

        <ImageView
            android:id="@+id/fallsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_general_margin"
            app:srcCompat="@drawable/ic_falls_black_24dp"
            app:tint="@android:color/tertiary_text_light"
            android:contentDescription="@string/falls" />

        <TextView
            android:id="@+id/stepsJumpsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/activity_text_level1_size" />

        <ImageView
            android:id="@+id/stepsJumpsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_general_margin"
            app:srcCompat="@drawable/ic_steps_black_24dp"
            app:tint="@android:color/tertiary_text_light"
            android:contentDescription="@string/falls" />

        <TextView
            android:id="@+id/caloriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/activity_text_level1_size" />

        <ImageView
            android:id="@+id/caloriesImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_general_margin"
            app:srcCompat="@drawable/ic_calories_black_24dp"
            app:tint="@android:color/tertiary_text_light"
            android:contentDescription="@string/falls" />

    </LinearLayout>

</LinearLayout>

